        ***************************************************************

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.0-15. (2019-06-20) -
-------------------------------------------------------

BUG FIXING
  o DIF summary table bug was fixed. Table is disaplayed when
    some DIF methods cannot be fitted.

MINOR UPDATES
  o Authors' and contributors' details were updated.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.0-14. (2019-06-19) -
-------------------------------------------------------

BUG FIXING
  o Bug in Bock's nominal IRT model was fixed. ICCs are now properly
    displayed for all binary data. Error for non-displayable
    table of parameters was further improved. Tables for items are
    displayed even in case that table for all items is not.
  o DIF items are now correctly written in reports.
  o Corrplot now properly replaces item names when Keep item names
    is not selected in Data upload section.
  o In DIF/Fairness section, histograms of Total scores for groups
    are now properly displayed also for ordinal items.

MAJOR UPDATES
  o Legends for multinomial and distractor plots were improved.

MINOR UPDATES
  o Authors' and contributors' details were updated.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.0-13. (2019-06-18) -
-------------------------------------------------------

BUG FIXING
  o Bug in Bock's nominal IRT model was fixed. ICCs are now properly
    displayed for Czech Trivia dataset. Error for non-displayable
    table of parameters was improved.
  o Bug in DistractorAnalysis was partially fixed, need to be revised.

MAJOR UPDATES
  o Reports:
      - long tables have now header on each new page
      - legend is now visible for IRT plots even when dataset consists
        of more than 50 items
  o Matching criterion in plotMultinomial() was relaxed to decrease
    size of reports.
